fix: visibilidade do botão de favoritar corrigido

--- a/frontend/src/app/materials/components/detail-material/detail-material.css
+++ b/frontend/src/app/materials/components/detail-material/detail-material.css
@@ -1,6 +1,6 @@
   .question-list-wrapper {
     width: 100%;
-    max-width: 700px;
+    max-width: 800px;
     background: white;
     padding: 20px;
     border-radius: 12px;
@@ -9,7 +9,7 @@
 
   .transaction-list-wrapper {
     width: 100%;
-    max-width: 700px;
+    max-width: 800px;
     background: white;
     padding: 20px;
     border-radius: 12px;
@@ -33,7 +33,7 @@
     padding: 32px;
     display: flex;
     gap: 32px;
-    max-width: 700px;
+    max-width: 800px;
     width: 100%;
   }
 
@@ -244,4 +244,9 @@ app-open-transaction {
 
 .estrelaAcesa:hover {
   color: rgba(0, 0, 0, 0.9);
+}
+
+.material-acoes-geral{
+  display: flex;
+  align-items: center;
 }
